<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bill for Meal</string>
    <string name="bill_for_meal">Bill for Meal</string>
    <string name="_0_00">0.00</string>
    <string name="total_cost">Total Cost</string>
    <string name="number_of_diners">Number of Diners</string>
    <string name="_10">10%</string>
    <string name="_15">15%</string>
    <string name="_20">20%</string>
    <string name="compute">Compute</string>
    <string name="invalid">Invalid Input</string>
</resources>